Fixed adjust scaling alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,11 @@ a {
 	grid-template-columns: 1fr 1fr;
 }
 
+#adjustLetterScalingMenu{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 
     #assignGrades>div:nth-child(6n),
     #assignGrades>div:nth-child(6n -1)
